# target-iceberg

./: LICENSE  pyproject.toml
target_iceberg/: __main__.py  sinks.py  target.py
